--- a/src/express/templates/errors/500.pug
+++ b/src/express/templates/errors/500.pug
@@ -19,11 +19,11 @@ html.html-server(lang='ru')
             a(href='new-ticket.html') Новая публикация
           li.error__item
             a(href='main.html') Главная страница
-        form.error__search.search.search--small(method='get' action='#' autocomplete='off')
+        form.error__search.search.search--small(method='get' action='/search' autocomplete='off')
           input(type='search' name='query' placeholder='Поиск' aria-label='Поиск')
           .search__icon
           .search__close-btn
         a.error__logo.logo(href='main.html')
-          img(src='img/logo.svg' width='179' height='34' alt='Логотип Куплю Продам')
+          img(src='/img/logo.svg' width='179' height='34' alt='Логотип Куплю Продам')
     script(src='js/vendor.js')
     script(src='js/main.js')
