--- a/src/express/templates/main/main.pug
+++ b/src/express/templates/main/main.pug
@@ -16,13 +16,15 @@ block content
                 +insertOfferImage(offer)
               .ticket-card__info
                 +ticketLabel(offer.type)
-                .ticket-card__categories
-                  a(href="#") #{offer.category}
+                each category of offer.categories
+                  .ticket-card__categories
+                    a(href="#") #{category.name}
                 .ticket-card__header
                   h3.ticket-card__title
-                    a(href="#") #{offer.title}
+                    a(href=`/offers/${offer.id}`) #{offer.title}
                   p.ticket-card__price
                     span.js-sum #{offer.sum}
                     |  ₽
                 .ticket-card__desc
                   p #{offer.description}
+  +pagination(page, totalPages, 2, `?`)
