--- a/src/express/templates/offers/ticket-add.pug
+++ b/src/express/templates/offers/ticket-add.pug
@@ -27,8 +27,8 @@ block content
                   span Обязательное поле
               .ticket-form__row
                 select#category-field.form__select.js-multiple-select(name='category' data-label='Выбрать категорию публикации')
-                  each category, index in categories
-                    option(value=category) #{category}
+                  each category of categories
+                    option(value=category.id) #{category.name}
               .ticket-form__row
                 .form__field.form__field--price
                   input#price-field.js-field.js-price(type='number' name='price' min='1' required='')
@@ -36,9 +36,9 @@ block content
                   span Обязательное поле
                 .form__switch.switch
                   .switch__item
-                    input#buy-field.visually-hidden(type='radio' name='action' value='OFFER')
+                    input#buy-field.visually-hidden(type='radio' name='action' value='offer')
                     label.switch__button(for='buy-field') Куплю
                   .switch__item
-                    input#sell-field.visually-hidden(type='radio' name='action' value='SALE')
+                    input#sell-field.visually-hidden(type='radio' name='action' value='sale')
                     label.switch__button(for='sell-field') Продам
             button.form__button.btn.btn--medium.js-button(type='submit' disabled='') Опубликовать
