--- a/src/express/templates/offers/ticket-edit.pug
+++ b/src/express/templates/offers/ticket-edit.pug
@@ -29,8 +29,8 @@ block content
                   span Обязательное поле
               .ticket-form__row
                 select#category-field.form__select.js-multiple-select(name='category' data-label='Выбрать категорию публикации' multiple='')
-                  each category, index in categories
-                    option(value=index selected=(offer.category===category)) #{category}
+                  each category in categories
+                    option(value=category.id selected=(offer.categories.some(item=> item.id===category.id))) #{category.name}
 
               .ticket-form__row
                 .form__field.form__field--price
@@ -39,9 +39,9 @@ block content
                   span Обязательное поле
                 .form__switch.switch
                   .switch__item
-                    input#buy-field.visually-hidden(type='radio' name='action' value='buy' checked=(offer.type===`OFFER`))
+                    input#buy-field.visually-hidden(type='radio' name='action' value='buy' checked=(offer.type===`offer`))
                     label.switch__button(for='buy-field') Куплю
                   .switch__item
-                    input#sell-field.visually-hidden(type='radio' name='action' value='sell' checked=(offer.type===`SALE`))
+                    input#sell-field.visually-hidden(type='radio' name='action' value='sell' checked=(offer.type===`sale`))
                     label.switch__button(for='sell-field') Продам
             button.form__button.btn.btn--medium.js-button(type='submit') Сохранить
