--- a/src/express/templates/layout.pug
+++ b/src/express/templates/layout.pug
@@ -9,6 +9,12 @@ head
   style
     a.active
       pointer-events: none
+    .server-error
+      border-radius: 10px
+      color: white
+      background-color: tomato
+      margin: 20px 0
+      padding: 10px
 body
   -
     const getRandomInt = (max) => Math.ceil(Math.random()*max);
@@ -20,37 +26,41 @@ body
   mixin  ticketLabel(type)
     span(class!=attributes.class || `ticket-card__label`) #{type === `offer` ? `Куплю` : `Продам`}
   mixin pagination(page, totalPages, width, prefix)
-  -
-    let start = page - width;
-    let end = page + width;
+    -
+      let start = page - width;
+      let end = page + width;
 
-    if(start < 1){
-      end += 1 - start;
-      start = 1;
-    }
+      if(start < 1){
+        end += 1 - start;
+        start = 1;
+      }
 
-    if(end > totalPages){
-      start -= end - totalPages;
-      end = totalPages;
-    }
+      if(end > totalPages){
+        start -= end - totalPages;
+        end = totalPages;
+      }
 
+      if(start < 1){
+        start = 1;
+      }
+      let i = start - 1
 
-    if(start < 1){
-      start = 1;
-    }
-    let i = start - 1
+    .tickets-list__pagination
+      ul.pagination
+        if start > 1
+          li
+            a(href=`${prefix}page=${page - 1}`) Назад
+        while i++ < end
+          li
+            a(class={active: i === page} href=`${prefix}page=${i}`)= i
+        if end < totalPages
+          li
+            a(href=`${prefix}page=${page + 1}`) Вперёд
 
-  .tickets-list__pagination
-    ul.pagination
-      if start > 1
-        li
-          a(href=`${prefix}page=${page - 1}`) Назад
-      while i++ < end
-        li
-          a(class={active: i === page} href=`${prefix}page=${i}`)= i
-      if end < totalPages
-        li
-          a(href=`${prefix}page=${page + 1}`) Вперёд
+  mixin insertErrorMessage(messages)
+    if messages
+      each message of messages
+        .server-error=message
 
   include partials/header.pug
   block content
