--- a/src/express/templates/offers/ticket-add.pug
+++ b/src/express/templates/offers/ticket-add.pug
@@ -6,7 +6,7 @@ block content
       .ticket-form__wrapper
         h1.ticket-form__title Новая публикация
         .ticket-form__tile
-          form.ticket-form__form.form(action='/offers/add' method='post' enctype='multipart/form-data' autocomplete='off')
+          form.ticket-form__form.form(action='/offers/add' method='POST' enctype='multipart/form-data' autocomplete='off')
             .ticket-form__avatar-container.js-preview-container
               .ticket-form__avatar.js-preview
               .ticket-form__field-avatar
@@ -41,4 +41,5 @@ block content
                   .switch__item
                     input#sell-field.visually-hidden(type='radio' name='action' value='sale')
                     label.switch__button(for='sell-field') Продам
+            +insertErrorMessage(validationMessages)
             button.form__button.btn.btn--medium.js-button(type='submit' disabled='') Опубликовать
