--- a/src/express/templates/offers/ticket-edit.pug
+++ b/src/express/templates/offers/ticket-edit.pug
@@ -6,7 +6,7 @@ block content
       .ticket-form__wrapper
         h1.ticket-form__title Редактировать публикацию
         .ticket-form__tile
-          form.ticket-form__form.form(action='#' method='post' enctype='multipart/form-data' autocomplete='off')
+          form.ticket-form__form.form(action=`/offers/edit/${id}` method='PUT' enctype='multipart/form-data' autocomplete='off')
             .ticket-form__avatar-container.js-preview-container.uploaded
               .ticket-form__avatar.js-preview
                 +insertOfferImage(offer)
@@ -44,4 +44,5 @@ block content
                   .switch__item
                     input#sell-field.visually-hidden(type='radio' name='action' value='sell' checked=(offer.type===`sale`))
                     label.switch__button(for='sell-field') Продам
+            +insertErrorMessage(validationMessages)
             button.form__button.btn.btn--medium.js-button(type='submit') Сохранить
