--- a/src/express/templates/offers/ticket.pug
+++ b/src/express/templates/offers/ticket.pug
@@ -42,7 +42,7 @@ block content
         .ticket__comments
           h2.ticket__subtitle Коментарии
           .ticket__comment-form
-            form.form.comment-form(action='#' method='post')
+            form.form.comment-form(action=`offers/${id}/comments` method='POST')
               .comment-form__header
                 a.comment-form__avatar.avatar(href='#')
                   img(src='/img/avatar.jpg' srcset='/img/avatar@2x.jpg 2x' alt='Аватар пользователя')
