--- a/src/express/templates/layout.pug
+++ b/src/express/templates/layout.pug
@@ -6,15 +6,7 @@ head
   meta(http-equiv='X-UA-Compatible' content='ie=edge')
   title Куплю. Продам
   link(rel='stylesheet' href='/css/style.min.css')
-  style
-    a.active
-      pointer-events: none
-    .server-error
-      border-radius: 10px
-      color: white
-      background-color: tomato
-      margin: 20px 0
-      padding: 10px
+  link(rel='stylesheet' href='/css/overstyle.css')
 body
   -
     const getRandomInt = (max) => Math.ceil(Math.random()*max);
