--- a/src/express/templates/main/login.pug
+++ b/src/express/templates/main/login.pug
@@ -8,11 +8,11 @@ block content
           a.login__link(href="/register") Регистрация
           h2 Вход
         .form__field.login__field
-          input#user-email.js-field(type="email" name="user-email" required="")
+          input#user-email.js-field(type="email" name="user-email" required)
           label(for="user-email") Эл. почта
           span Обязательное поле
         .form__field.login__field
-          input#user-password.js-field(type="password" name="user-password" required="")
+          input#user-password.js-field(type="password" name="user-password" required)
           label(for="user-password") Пароль
           span Обязательное поле
         button.login__button.btn.btn--medium.js-button(type="submit" disabled="") Войти
