--- a/src/express/templates/offers/ticket-edit.pug
+++ b/src/express/templates/offers/ticket-edit.pug
@@ -18,7 +18,7 @@ block content
             .ticket-form__content
               .ticket-form__row
                 .form__field
-                  input#ticket-name.js-field(type='text' name='ticket-name' value=offer.title required='')
+                  input#ticket-name.js-field(type='text' name='ticket-name' value=offer.title required)
                   label(for='ticket-name') Название
                   span Обязательное поле
               .ticket-form__row
@@ -34,7 +34,7 @@ block content
 
               .ticket-form__row
                 .form__field.form__field--price
-                  input#price-field.js-field.js-price(type='number' name='price' min='1' value=offer.sum required='')
+                  input#price-field.js-field.js-price(type='number' name='price' min='1' value=offer.sum required)
                   label(for='price-field') Цена
                   span Обязательное поле
                 .form__switch.switch
